Another fix breaks the wall

--- a/styles/_navigation.less
+++ b/styles/_navigation.less
@@ -4,6 +4,7 @@
   height: 92vh;
   padding: 22px 0;
   position: sticky;
+  margin-top: 64px;
   top: @layout-header-height;
 
   .ant-layout-sider-children {
@@ -93,7 +94,7 @@
   background-color: @main-background-color;
 
   .ant-layout-content {
-    height: 100vh;
+    height: 100%;
   }
 }
 
